--- a/GGD_Groep_9/app/build.gradle
+++ b/GGD_Groep_9/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "smtp.proftaak.ggd"
+        applicationId "smpt.proftaak.ggd"
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
