--- a/GGD_Groep_9/build.gradle
+++ b/GGD_Groep_9/build.gradle
@@ -7,7 +7,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:1.1.0'
         // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // in the individual module build.gradle file
+        classpath 'com.google.gms:google-services:1.3.0-beta1'
+        //classpath 'com.google.android.gms:play-services:4.4.52'
     }
 }
 
