Added vragenlijst activity

--- a/GGD_Groep_9/app/src/main/AndroidManifest.xml
+++ b/GGD_Groep_9/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="smpt.proftaak.ggd">
+    package="smpt.proftaak.ggd" >
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="smpt.proftaak.ggd.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,19 +16,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="smpt.proftaak.ggd.RampActivity"
+        <activity
+            android:name=".RampActivity"
             android:label="@string/titelRamp"
-            android:parentActivityName="smpt.proftaak.ggd.MainActivity" >
+            android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="smpt.proftaak.ggd.MainActivity" />>
+                android:value="smpt.proftaak.ggd.MainActivity" />
+>
         </activity>
+        <activity
+            android:name=".settingsActivity"
+            android:label="@string/settingsTitel" />
 
-        <activity android:name="smpt.proftaak.ggd.settingsActivity" android:label="@string/settingsTitel"></activity>
         <uses-permission android:name="android.permission.INTERNET" />
         <uses-permission android:name="android.permission.GET_ACCOUNTS" />
         <uses-permission android:name="android.permission.USE_CREDENTIALS" />
 
+        <activity
+            android:name=".VragenlijstActivity"
+            android:label="@string/title_activity_vragenlijst" >
+        </activity>
     </application>
+
 </manifest>
