back button voor settings

--- a/GGD_Groep_9/app/src/main/AndroidManifest.xml
+++ b/GGD_Groep_9/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         <activity
             android:name="smpt.proftaak.ggd.settingsActivity"
             android:label="@string/settingsTitel">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="smpt.proftaak.ggd.MainActivity" />
         </activity>
 
         <activity
