--- a/GGD_Groep_9/app/src/main/AndroidManifest.xml
+++ b/GGD_Groep_9/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="smpt.proftaak.ggd">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,10 +14,11 @@
 
         <activity
             android:name="smpt.proftaak.ggd.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -21,8 +26,8 @@
         <activity
             android:name="smpt.proftaak.ggd.RampActivity"
             android:label="@string/titelRamp"
-            android:parentActivityName="smpt.proftaak.ggd.MainActivity">
-            android:parentActivityName=".MainActivity" >
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
          <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="smpt.proftaak.ggd.MainActivity" />>
@@ -30,7 +35,9 @@
 
         <activity
             android:name="smpt.proftaak.ggd.settingsActivity"
-            android:label="@string/settingsTitel">
+            android:label="@string/settingsTitel"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="smpt.proftaak.ggd.MainActivity" />
@@ -38,23 +45,19 @@
 
         <activity
             android:name="smpt.proftaak.ggd.BaseActivity"
-            android:label="@string/app_name">
-            android:name=".settingsActivity"
-            android:label="@string/settingsTitel"
-            android:parentActivityName=".MainActivity">
+            android:label="@string/app_name"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value="smpt.proftaak.ggd.MainActivity" />
         </activity>
 
-        <uses-permission android:name="android.permission.INTERNET" />
-        <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-        <uses-permission android:name="android.permission.USE_CREDENTIALS" />
-
-
         <activity
             android:name=".VragenlijstActivity"
-            android:label="@string/title_activity_vragenlijst" >
+            android:label="@string/title_activity_vragenlijst"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 </manifest>
