Fixed SettingsActivity name

--- a/GGD_Groep_9/app/src/main/AndroidManifest.xml
+++ b/GGD_Groep_9/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         </activity>
 
         <activity
-            android:name=".SettingsActivity"
+            android:name=".settingsActivity"
             android:label="@string/settingsTitel"
             android:configChanges="orientation"
             android:screenOrientation="portrait">
